# nbc-back

./: .coverage  .gitignore  README.md  alembic.ini  cli.py  docker-compose.yaml  makefile  pyproject.toml  pyproject.toml~  requirements.txt  settings.toml  settings.toml~
alembic/: env.py
alembic/versions/: 3aa37e61e240_add_isactive_to_user.py  826d78d7ec60_update_models.py  9e5090c48942_initial_schema_sync.py  b40a2354afd2_add_user_and_file.py
app/: Dockerfile  __init__.py  app.py  application.py  config.py  crud.py  db.py  dependencies.py  entrypoint.sh  main.py  schemas.py
app/core/: config.py  logging.py  metrics.py  security.py
app/exceptions/: duplicate_error.py  sql_error.py
app/middlwares/: metrics_middleware.py
app/models/: BaseModel.py  __init__.py  base_model.py  bucket.py  bucket_model.py  file.py  files_model.py  object.py  user.py  users_model.py
app/repositories/: bucket_repository.py  object_repository.py  user_repository.py
app/routers/: auth.py  files.py
app/schemas/: __init__.py  bucket.py  bucket_schema.py  file.py  file_schema.py  object_schema.py  token_data_schema.py  token_schema.py  user.py  user_create_schema.py  user_schema.py
app/services/: __init__.py  auth_service.py  bucket_service.py  object_service.py  user_service.py
db_migrations/: env.py
db_migrations/versions/: 687827905161_recreate_migrations.py
docker/: DockerFile  Dockerfile  docker-compose.yml  grafana.ini
monitoring/: prometheus.yml
tests/: .coverage  conftest.py  test_buckets.py
tests/integration/: .coverage  test_bucket.py  test_file_operations.py  test_user_operations.py
tests/unit/: .coverage  test_buckets.py  test_files.py  test_misc_api.py  test_objects.py  (+1 more)
(+15 files in other folders)
